--- a/styles/style.css
+++ b/styles/style.css
@@ -89,7 +89,7 @@ body {
     text-align: center;
     padding: 21.5px 0;
     border-radius: 8px;
-    font-size: s1.5rem;
+    font-size: 1.5rem;
     font-weight: 600;
     text-decoration: none;
     color: var(--color-secundario);
